# IPAGE-Soil-Nutrient-Prediction-for-Enhanced-Fertilizer-Recommendations

./: .gitignore  README.md  generate_requirements_from_toml.py  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: tests.yml
Exploratory-Data-Analysis/: iPAGE_Soil_Data_EDA_&_initial_model_eval.ipynb
Exploratory-Data-Analysis/by-Chanathip/: EDA.ipynb
Jamsheeda/: eda.ipynb  modelling.ipynb
Jamsheeda/Data/: SoilData_sample_iPAGE_cleaned.xlsx
Taylor_Will/: 2410_iPAGE_SoilData_241029.csv
Taylor_Will/.virtual_documents/: Untitled.ipynb
data/: .gitignore  2410_iPAGE_SoilData-241029.csv.dvc  README.md
notebooks/: test.py
notebooks/task_1_data_collection_and_preprocessing/by Sylva George/: iPAGE_Soil_Data_EDA_&_initial_model_eval.ipynb
notebooks/task_1_data_collection_and_preprocessing/by-Gideon/: by-Gideon.ipynb
notebooks/task_1_data_collection_and_preprocessing/by-Jamsheeda/: data_cleaning.ipynb
notebooks/task_1_data_collection_and_preprocessing/by-RichardOmega/: IPAGE_EDA.ipynb  README.md
notebooks/task_1_data_collection_and_preprocessing/by-tasfiq/: Ipage_soil_data_EDA.ipynb
notebooks/task_2_exploratory_data_analysis/: Preprocessed Dataset.csv  Preprocessed.csv
notebooks/task_2_exploratory_data_analysis/by-Anidipta/: EDA_IPAGE_Soil_Sample.ipynb
notebooks/task_2_exploratory_data_analysis/by-Ararso/: Ipage_soil_data_EDA.ipynb
src/app/: app.py
src/data/: 2410_iPAGE_SoilData_cleaned.csv  2410_iPAGE_SoilData_cleaned.xlsx  README.md  load_data.py
src/visualizations/: SWEETVIZ_REPORT.html
tests/: test_data.py  utils.py
(+180 files in other folders)
