[tool.poetry]
name = "ipage"
version = "0.1.0"
description = ""
authors = ["Soham Das <144812467+tosoham@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.29.5"
easydict = "^1.13"
pandas = "^2.2.3"
scipy = "^1.14.1"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
requests = "2.32.3"
numpy = "1.26.4"
openpyxl = "^3.1.5"
sweetviz = "^2.3.1"
plotly = "^5.24.1"
streamlit = "1.40.0"
tpot = "^0.12.2"
colorama = "^0.4.6"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.3.0"
notebook = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
